[package]
name = "hedera"
version = "0.1.0"
authors = ["Ümit Akköse <umieat@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
bytecount = "0.6.2"
clap = {version = "3.0.0-beta.2", features = ["yaml"]}
csv = "1.1.5"
plotters = "0.3.0"
serde = {version = "1.0.118", features = ["derive"]}

[profile.release]
lto = true